user stats section spacing correction

--- a/styles/home.css
+++ b/styles/home.css
@@ -125,7 +125,7 @@ nav{
 
 .user-stat-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 152px;
     margin-top: 40px;
 }
@@ -260,7 +260,21 @@ nav{
     margin-bottom: 10px;
 }
 
-.form-container form input[type="text"],
+.form-container form input[type="text"], input[type="email"], textarea{
+    display: block;
+    font-size: 19px;
+    width: 100%;
+    padding: 20px 32px;
+    margin: 0 auto 16px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #D6DDED;
+    border-radius: 10px;
+    /* box-sizing: border-box; */
+}
+
+/* .form-container form input[type="text"],
 .form-container form input[type="email"],
 .form-container form textarea{
     display: block;
@@ -274,7 +288,7 @@ nav{
     border-color: #D6DDED;
     border-radius: 10px;
     box-sizing: border-box;
-}
+} */
 
 .form-container input[type="submit"]{
     display: block;
